--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -1,16 +1,13 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Settings
+      Profile
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content>
     <ion-list>
-      <button ion-item [navPush]="aboutPage">
-        About this app
-      </button>
       <button ion-item [navPush]="accountPage">
         Account
       </button>
