added 'Job History', 'Education', 'Certifications' pages

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -8,6 +8,16 @@
 
 <ion-content>
     <ion-list>
+      <button ion-item [navPush]="jobhistoryPage">
+        Job History
+      </button>
+      <button ion-item [navPush]="educationPage">
+        Education
+      </button>
+      <button ion-item [navPush]="certificationsPage">
+        Certifications
+      </button>
+
       <button ion-item [navPush]="accountPage">
         Account
       </button>
