Setup Page titles, profile list menu

--- a/src/pages/certifications/certifications.html
+++ b/src/pages/certifications/certifications.html
@@ -7,12 +7,14 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>certifications</ion-title>
+    <ion-title>Certifications</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+  List of Certification records from MySQL / REST api
 
 </ion-content>
