--- a/src/pages/education/education.html
+++ b/src/pages/education/education.html
@@ -7,12 +7,14 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>education</ion-title>
+    <ion-title>Education</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+  List of Education records from MySQL / REST api
 
 </ion-content>
