--- a/src/pages/jobs/jobs.html
+++ b/src/pages/jobs/jobs.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>jobs</ion-title>
+    <ion-title>Jobs</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -16,6 +16,6 @@
 <ion-content padding>
 
   This is the Jobs page. This will generate a list view of the contents of the Applicant Stack API
-  
+
 
 </ion-content>
