--- a/src/pages/forum/forum.html
+++ b/src/pages/forum/forum.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>forum</ion-title>
+    <ion-title>Forum</ion-title>
   </ion-navbar>
 
 </ion-header>
