--- a/src/pages/jobhistory/jobhistory.html
+++ b/src/pages/jobhistory/jobhistory.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>jobhistory</ion-title>
+    <ion-title>Job History</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -15,4 +15,6 @@
 
 <ion-content padding>
 
+  List of Job History records from MySQL / REST api
+  
 </ion-content>
