added CRUD controls to job history view

--- a/src/pages/jobhistory/jobhistory.html
+++ b/src/pages/jobhistory/jobhistory.html
@@ -93,7 +93,7 @@
             </button>
           </ion-col>
           <ion-col text-right>
-            <button ion-button icon-left clear small>
+            <button ion-button icon-left clear small color="danger">
               <ion-icon name="trash"></ion-icon>
               <div>Delete</div>
             </button>
