--- a/src/pages/jobhistory/jobhistory.html
+++ b/src/pages/jobhistory/jobhistory.html
@@ -116,13 +116,13 @@
       </ion-card>
 
     </ion-list>
-    <div [hidden]="jobs || jobsErrMess">
+    <div [hidden]="jobs || errMess">
       <ion-spinner></ion-spinner>
       <h4>Loading ... </h4>
     </div>
-    <div *ngIf="jobsErrMess">
+    <div *ngIf="errMess">
       <h2>Error</h2>
-      <h4>{{ jobsErrMess }}</h4>
+      <h4>{{ errMess }}</h4>
     </div>
   </div>
 </ion-content>
