--- a/src/pages/jobhistory/jobhistory.html
+++ b/src/pages/jobhistory/jobhistory.html
@@ -22,10 +22,6 @@
 .job-dates p {
 }
 
-.edit-mode {
-  color: green;
-}
-
 </style>
 <ion-header>
 
@@ -58,15 +54,9 @@
           <ion-avatar item-start>
             <img src="http://cdn.agility360app.net/">
           </ion-avatar>
-
-          <div class="edit-mode" [hidden]="isViewMode">
-            <h2>Hellow world.</h2>
-          </div>
-          <div [hidden]="isEditMode">
-            <h2>{{ job.company_name || uppercase }}</h2>
-            <p>{{ job.job_title}}</p>
-            <p>{{ job.department.toString().replace("None", "") }}</p>
-          </div>
+          <h2>{{ job.company_name || uppercase }}</h2>
+          <p>{{ job.job_title}}</p>
+          <p>{{ job.department.toString().replace("None", "") }}</p>
         </ion-item>
 
         <ion-card-content>
@@ -110,7 +100,7 @@
 
         <ion-row>
           <ion-col>
-            <button ion-button icon-left clear small (click)="editJobHistory(job)">
+            <button ion-button icon-left clear small (click)="editJobHistory($event, job)">
               <ion-icon name="create"></ion-icon>
               <div>Edit</div>
             </button>
