created Wordpress provider for cms.agility360app.net REST api

--- a/src/pages/jobs/jobs.html
+++ b/src/pages/jobs/jobs.html
@@ -1,21 +1,65 @@
 <!--
-  Generated template for the JobsPage page.
+  Generated template for the JobhistoryPage page.
 
   See http://ionicframework.com/docs/components/#navigation for more info on
   Ionic pages and navigation.
 -->
+<style>
+
+</style>
 <ion-header>
 
   <ion-navbar>
     <ion-title>Jobs</ion-title>
+    <ion-buttons start>
+      <button ion-button icon-only (click)="addJobHistory()">
+        <ion-icon name="add"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
-
 </ion-header>
 
-
 <ion-content padding>
+  <ion-refresher (ionRefresh)="refreshData($event)">
+    <ion-refresher-content
+                  pullingIcon="arrow-dropdown"
+                  pullingText="Pull to refresh"
+                  refreshingSpinner="circles"
+                  refreshingText="Refreshing...">
+    </ion-refresher-content>
+  </ion-refresher>
 
-  This is the Jobs page. This will generate a list view of the contents of the Applicant Stack API
+  <div *ngIf="jobs">
+    <ion-list *ngFor="let job of jobs">
+      <ion-card>
+        <ion-item>
+          <ion-avatar item-start>
+            <img src="http://cdn.agility360app.net/">
+          </ion-avatar>
+          <h2>{{ job.title.rendered }}</h2>
+        </ion-item>
 
+        <ion-card-content>
+          <ion-item>
+            <ion-row>
+              <ion-col>
+                <p class="description" text-wrap>{{ job.content.rendered }}</p>
+              </ion-col>
+            </ion-row>
+          </ion-item>
+        </ion-card-content>
 
+      </ion-card>
+
+    </ion-list> <!-- *ngFor="let job of jobs" -->
+  </div> <!-- *ngIf="jobs" -->
+
+  <div [hidden]="jobs || errMess">
+    <ion-spinner name="bubbles"></ion-spinner>
+    <h4>Loading ... </h4>
+  </div>
+  <div *ngIf="errMess">
+    <h2>Error</h2>
+    <h4>{{ errMess }}</h4>
+  </div>
 </ion-content>
