--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -1,6 +1,6 @@
 <ion-content>
   <div text-center class="logo">
-    <img src="assets/ionic-aws-logo.png" />
+    <img src="assets/agility360-logo-transparent-512x512.png" />
   </div>
   <form (submit)="login()">
     <ion-list>
