--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -1,6 +1,6 @@
 <ion-content>
   <div text-center class="logo">
-    <img src="assets/ionic-aws-logo.png" />
+    <img src="assets/agility360-logo-transparent-512x512.png" />
   </div>
   <form (submit)="signup()">
     <p *ngIf="error" style="text-align: center">{{error.message}}</p>
