--- a/src/pages/resume/resume.html
+++ b/src/pages/resume/resume.html
@@ -7,7 +7,7 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Forum</ion-title>
+    <ion-title>Resume</ion-title>
   </ion-navbar>
 
 </ion-header>
