--- a/src/pages/tabs/tabs.html
+++ b/src/pages/tabs/tabs.html
@@ -1,7 +1,7 @@
 <ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Jobs" tabIcon="briefcase"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="News" tabIcon="globe"></ion-tab>
-  <ion-tab [root]="tab3Root" tabTitle="Forum" tabIcon="paper"></ion-tab>
+  <ion-tab [root]="tab3Root" tabTitle="Resume" tabIcon="paper"></ion-tab>
   <ion-tab [root]="tab4Root" tabTitle="Notifications" tabIcon="information-circle"></ion-tab>
   <ion-tab [root]="tab5Root" tabTitle="Profile" tabIcon="contact"></ion-tab>
 </ion-tabs>
