added wordpress feed to Resume Tips page

--- a/src/pages/resume/resume.html
+++ b/src/pages/resume/resume.html
@@ -1,19 +1,82 @@
 <!--
-  Generated template for the ForumPage page.
+  written by: McDaniel
+  date:       august 2017
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
+  templated html for Jobs, News and Resume pages.
 -->
+<style>
+  .card-title-block {
+    margin-left: 2px;
+    margin-right: 2px;
+    border-bottom: 1px solid #ddd;
+  }
+  .wordpress {
+    text-align: justify;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+  .wp p {
+    margin-top: 25px;
+    margin-bottom: 25px;
+    color: green;
+  }
+
+  .wp h3 {
+    font-weight: bolder;
+    text-align: center;
+  }
+</style>
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Resume</ion-title>
+    <ion-title>Resume Tips</ion-title>
   </ion-navbar>
-
 </ion-header>
 
-
 <ion-content padding>
+  <ion-refresher (ionRefresh)="refreshData($event)">
+    <ion-refresher-content
+                  pullingIcon="arrow-dropdown"
+                  pullingText="Pull to refresh"
+                  refreshingSpinner="circles"
+                  refreshingText="Refreshing...">
+    </ion-refresher-content>
+  </ion-refresher>
 
-  This is the Forum page. This can also initially be a simple setup where Ryan publishes a basic html file?
+  <div *ngIf="posts">
+    <ion-list *ngFor="let post of posts">
+      <ion-card>
+        <div class="card-title-block">
+          <ion-item>
+            <ion-avatar item-start>
+              <img src="http://cdn.agility360app.net/">
+            </ion-avatar>
+            <h2>{{ post.title.rendered }}</h2>
+          </ion-item>
+        </div>
+
+        <ion-card-content>
+          <ion-item>
+            <ion-row>
+              <ion-col>
+                <img src="{{ post.featured_media_url }}">
+              <div class="wordpress" text-wrap [innerHtml]="post.content.rendered | safeHtml"></div>
+              </ion-col>
+            </ion-row>
+          </ion-item>
+        </ion-card-content>
+
+      </ion-card>
+
+    </ion-list> <!-- *ngFor="let post of posts" -->
+  </div> <!-- *ngIf="posts" -->
+
+  <div [hidden]="posts || errMess">
+    <ion-spinner name="bubbles"></ion-spinner>
+    <h4>Loading ... </h4>
+  </div>
+  <div *ngIf="errMess">
+    <h2>Error</h2>
+    <h4>{{ errMess }}</h4>
+  </div>
 </ion-content>
