--- a/src/pages/jobhistory/jobhistory.html
+++ b/src/pages/jobhistory/jobhistory.html
@@ -105,13 +105,13 @@
 
         <ion-row>
           <ion-col>
-            <button ion-button icon-left clear small (click)="edit($event, job)">
+            <button ion-button icon-left clear small (click)="edit($event, card)">
               <ion-icon name="create"></ion-icon>
               <div>Edit</div>
             </button>
           </ion-col>
           <ion-col text-right>
-            <button ion-button icon-left clear small color="danger" (click)="delete(job)">
+            <button ion-button icon-left clear small color="danger" (click)="delete(card)">
               <ion-icon name="trash"></ion-icon>
               <div>Delete</div>
             </button>
