code certification history and detail page

--- a/src/pages/certification-detail/certification-detail.html
+++ b/src/pages/certification-detail/certification-detail.html
@@ -1,18 +1,50 @@
-<!--
-  Generated template for the CertificationDetailPage page.
+<style>
+.form-label {
+  margin-top: 10px;
+}
+.editable-field {
+  color: green;
+  font-weight: bolder;
+  margin-bottom: 5px;
+}
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
+.description {
+  min-height: 100px;
+}
+</style>
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Certification Detail</ion-title>
+    <ion-title text-capitalize>{{ action }} Certification</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+
+  <form (ngSubmit)="processForm()">
+    <ion-item>
+      <ion-label stacked class="form-label">Instituion Name</ion-label>
+      <ion-input class="editable-field" type="text" [(ngModel)]="obj.institution_name" name="institution_name" placeholder="Institution Name"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label stacked class="form-label">Certification Name</ion-label>
+      <ion-input class="editable-field" type="text" [(ngModel)]="obj.certification_name" name="certification_name" placeholder="Certification Name"></ion-input>
+    </ion-item>
+    <ion-item>
+      <ion-label stacked class="form-label">Date Received</ion-label>
+      <ion-datetime displayFormat="MM/DD/YYYY" [(ngModel)]="obj.date_received" name="date_received"></ion-datetime>
+    </ion-item>
+    <ion-item>
+      <ion-label stacked class="form-label">Expire Date</ion-label>
+      <ion-datetime displayFormat="MM/DD/YYYY" [(ngModel)]="obj.expire_date" name="expire_date"></ion-datetime>
+    </ion-item>
+    <ion-item>
+      <ion-label stacked class="form-label">Description</ion-label>
+<!--      <ion-textarea class="editable-field" class="description" [(ngModel)]="obj.description" name="description" placeholder="Optional: provide us with a few sentences about your role and responsibilities for this position."></ion-textarea>  -->
+    </ion-item>
+    <button ion-button type="submit" block>Save</button>
+  </form>
 
 </ion-content>
