--- a/src/pages/certifications/certifications.html
+++ b/src/pages/certifications/certifications.html
@@ -1,20 +1,112 @@
 <!--
-  Generated template for the CertificationsPage page.
+  written by: mcdaniel
+  date:       august 2017
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
+  usage:      template page construction for user profile pages
+              Job History, Education, and Certifications
 -->
+<style>
+.description {
+  text-align: justify;
+}
+
+.job-dates p {
+}
+
+</style>
 <ion-header>
 
   <ion-navbar>
     <ion-title>Certifications</ion-title>
+    <ion-buttons start>
+      <button ion-button icon-only (click)="add()">
+        <ion-icon name="add"></ion-icon>
+      </button>
+    </ion-buttons>
   </ion-navbar>
-
 </ion-header>
 
-
 <ion-content padding>
+  <ion-refresher (ionRefresh)="refresh($event)">
+    <ion-refresher-content
+                  pullingIcon="arrow-dropdown"
+                  pullingText="Pull to refresh"
+                  refreshingSpinner="circles"
+                  refreshingText="Refreshing...">
+    </ion-refresher-content>
+  </ion-refresher>
 
-  List of Certification records from MySQL / REST api
 
+  <h3 style="color: #2897C2;">Why Provide Your Certifications?</h3>
+  <p>By providing Agility 360 with accurate details of your certifications we are able to blah blah blah.</p>
+  <p>Research shows that blah blah blah.</p>
+
+
+  <div *ngIf="cards">
+    <ion-list *ngFor="let card of cards">
+      <ion-card>
+        <ion-item>
+          <ion-avatar item-start>
+            <img src="http://cdn.agility360app.net/">
+          </ion-avatar>
+          <h2>{{ card.institution_name || uppercase }}</h2>
+          <p>{{ card.certification_name}}</p>
+        </ion-item>
+
+        <ion-card-content>
+          <ion-item class="job-dates">
+            <ion-row>
+              <ion-col text-left>
+                <p>Date Received</p>
+              </ion-col>
+              <ion-col text-right>
+                <p>{{ card.date_received.toString().replace("None", "") | date:"MMM dd, yyyy" }}</p>
+              </ion-col>
+            </ion-row>
+            <ion-row>
+              <ion-col text-left>
+                <p>Expiration Date</p>
+              </ion-col>
+              <ion-col text-right>
+                <p>{{ card.expire_date.toString().replace("None", "") | date:"MMM dd, yyyy" }}</p>
+              </ion-col>
+            </ion-row>
+          </ion-item>
+
+          <ion-item>
+            <ion-row>
+              <ion-col>
+                <p class="description" text-wrap>Text description should go here?</p>
+              </ion-col>
+            </ion-row>
+          </ion-item>
+        </ion-card-content>
+
+        <ion-row>
+          <ion-col>
+            <button ion-button icon-left clear small (click)="edit($event, card)">
+              <ion-icon name="create"></ion-icon>
+              <div>Edit</div>
+            </button>
+          </ion-col>
+          <ion-col text-right>
+            <button ion-button icon-left clear small color="danger" (click)="delete(card)">
+              <ion-icon name="trash"></ion-icon>
+              <div>Delete</div>
+            </button>
+          </ion-col>
+        </ion-row>
+      </ion-card>
+
+    </ion-list> <!-- *ngFor="let job of jobs" -->
+  </div> <!-- *ngIf="jobs" -->
+
+  <div [hidden]="cards || errMess">
+    <ion-spinner name="bubbles"></ion-spinner>
+    <h4>Loading ... </h4>
+  </div>
+  <div *ngIf="errMess">
+    <h2>Error</h2>
+    <h4>{{ errMess }}</h4>
+  </div>
 </ion-content>
