--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -21,6 +21,49 @@
         <ion-input type="password" [(ngModel)]="userDetails.password" name="password"></ion-input>
       </ion-item>
 
+      <ion-item>
+        <ion-label floating>First Name</ion-label>
+        <ion-input type="text" [(ngModel)]="candidate.first_name" autocorrect="off" autocapitalize="none" name="first_name"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label floating>Middle Name</ion-label>
+        <ion-input type="text" [(ngModel)]="candidate.middle_name" autocorrect="off" autocapitalize="none" name="middle_name"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label floating>Last Name</ion-label>
+        <ion-input type="text" [(ngModel)]="candidate.last_name" autocorrect="off" autocapitalize="none" name="last_name"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label floating>Your Current City of Residence</ion-label>
+        <ion-input type="text" [(ngModel)]="candidate.city" autocorrect="off" autocapitalize="none" name="city"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label floating>Your Current State of Residence</ion-label>
+        <ion-input type="text" [(ngModel)]="candidate.state" autocorrect="off" autocapitalize="none" name="state"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label floating>Your Daytime Phone Number</ion-label>
+        <ion-input type="tel" [(ngModel)]="candidate.phone_number" autocorrect="off" autocapitalize="none" name="phone_number"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label floating>Are You Currently Job Hunting?</ion-label>
+        <ion-checkbox class="editable-field" [(ngModel)]="candidate.job_hunting" name="job_hunting"></ion-checkbox>
+      </ion-item>
+
+<!--
+industry_id: number;
+subindustry_id: number;
+profession_id: number;
+subprofession_id: number;
+
+-->
+
       <div padding>
         <button ion-button color="primary" block>Register</button>
       </div>
