wired up agility candidate to signup page

--- a/src/pages/signup/signup.html
+++ b/src/pages/signup/signup.html
@@ -52,7 +52,7 @@
       </ion-item>
 
       <ion-item>
-        <ion-label floating>Are You Currently Job Hunting?</ion-label>
+        <ion-label>Are You Currently Job Hunting?</ion-label>
         <ion-checkbox class="editable-field" [(ngModel)]="candidate.job_hunting" name="job_hunting"></ion-checkbox>
       </ion-item>
 
