--- a/src/pages/confirm/confirm.html
+++ b/src/pages/confirm/confirm.html
@@ -1,4 +1,7 @@
 <ion-content>
+  <div text-center class="logo">
+    <img src="assets/agility360-logo-transparent-512x512.png" width="50%" />
+  </div>
   <div padding>
     <p>Please enter the confirmation code sent to your email to verify your account:</p>
   </div>
@@ -20,4 +23,4 @@
 
     </ion-list>
   </form>
-</ion-content>  
+</ion-content>
